--- a/analysis/paper/paper.Rmd
+++ b/analysis/paper/paper.Rmd
@@ -222,9 +222,8 @@ What sort of observations would trigger action? What actions?
 # if (system("git config user.email")=="mward2@swarthmore.edu") source("./scripts/data_retrievalSwarthmore.R")
 # else source("./scripts/data_retrievalNPS.R")
 
-###########
-# MADELEINE WILL REPLACE WITH CODE TO VARIOUS TABLES FROM CSV FILES
-###########
+#gets error
+#source("./analysis/scripts/data_retrievalCSVs.R")
 ```
 
 Species: 
